--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -137,17 +137,15 @@ body {
   z-index: 1;
   width: 100%;
   height: 100%;
+  min-width: 28rem;
 }
 
 .slide.portrait::after {
   width: 100%;
   height: 100%;
+  min-height: 20rem;
   padding: 0;
   transition: transform 0.3s ease, min-height 0.5s ease;
-}
-
-.slide.landscape::after {
-  min-width: 575px;
 }
 
 .slide-caption {
@@ -337,8 +335,7 @@ body {
   font-style: normal;
   text-shadow: -1px -1px 0 #a20003, 1px -1px 0 #a20003, -1px 1px 0 #a20003,
     1px 1px 0 #a20003;
-  transition: transform 0.3s ease,
-    height 0.5s ease-in-out;
+  transition: transform 0.3s ease, height 0.5s ease-in-out;
 }
 
 .btn:hover {
@@ -350,10 +347,10 @@ body {
 /* #region Media Queries */
 
 @media (min-width: 1024px) {
-  .slide.portrait::after {
+  /* .slide.portrait::after {
     width: 120%;
     height: 120%;
-  }
+  } */
 
   .slideshow-nav img {
     width: 4rem;
@@ -414,6 +411,14 @@ body {
 }
 
 @media (min-width: 1440px) {
+  /* .slide::after {
+    top: 60%;
+  }
+  .slide.portrait::after {
+    width: 100%;
+    height: 100%;
+  } */
+
   .slideshow-nav img {
     width: 6rem;
   }
